# StellaClass

./: README.md  pyproject.toml  requirements.txt
StellaClass/: trained_model.ipynb
