[build-system]
requires = [
    "setuptools", 
    "numpy",
    "cython", 
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "StellaClass"
version = "0.1.0"
dependencies = [
    "numpy",
    "astropy>=4",
    "scipy",
    "matplotlib",
    "pytest",
    "pandas",
    "astroquery",
    "scikit-learn"
]

[tool.setuptools.packages]
find = {}
